@@ -1,5 +1,6 @@
 
 3.97  2013-04-23
+  - Added scheme_data attribute to Mojo::URL.
   - Improved tests.
 
 3.96  2013-04-22
